Fixed footer bug
it was merging with the container

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="category">
             <h2>Maths</h2>
             <ul class="pdf-list">
+                <li><a href="https://www.mathraining.be">Mathstraining</a></li>
                 <li><a href="data/Maths/Modern_NT.pdf" target="_blank">Modern_NT</a></li>
                 <li><a href="data/Maths/EvanChen.pdf" target="_blank">EvanChen</a></li>
                 <li><a href="data/Maths/Functional Equations and How To Solve Them.pdf" target="_blank">Functional Equations and How To Solve Them</a></li>
@@ -22,11 +23,12 @@
         <div class="category">
             <h2>IT</h2>
             <ul class="pdf-list">
+              <li><a href="https://codeforces.com">Codeforces</a></li>
+              <li><a href="https://usaco.guide/dashboard">Usaco guide</a></li>
                 <li><a href="data/IT/CSES.pdf" target="_blank">Competitive Programmer’s Handbook</a></li>
                 <li><a href="data/IT/PAPS.pdf" target="_blank">Principles of Algorithmic Problem Solving</a></li>
                 <li><a href="data/IT/AITUCO.pdf" target="_blank">An introduction to the
                   usa computing olympiad</a></li>
-
             </ul>
         </div>
         <div class="category">
