Data.json added with possibility of modifying inside the website

--- a/index.html
+++ b/index.html
@@ -12,44 +12,94 @@
         <div class="category">
             <h2>Maths</h2>
             <ul class="pdf-list">
-                <li><a href="https://www.mathraining.be">Mathstraining</a></li>
-                <li><a href="data/Maths/Modern_NT.pdf" target="_blank">Modern_NT</a></li>
-                <li><a href="data/Maths/EvanChen.pdf" target="_blank">EvanChen</a></li>
-                <li><a href="data/Maths/Functional Equations and How To Solve Them.pdf" target="_blank">Functional Equations and How To Solve Them</a></li>
-                <li><a href="data/Maths/Combinatorics.pdf" target="_blank">Combinatorics</a></li>
-                <li><a href="data/Maths/Inequalities.pdf" target="_blank">Inequalities</a></li>
+                <li>
+                  <a href="https://www.mathraining.be">Mathstraining</a>
+                  <span class="span_misc"><span id="Mathraining_role" style="color: #DD77FF;">Expérimenté</span> - <span id="Mathraining_points">1419</span> points</span>
+                </li>
+                <li>
+                  <a href="data/Maths/Modern_NT.pdf" target="_blank">Modern_NT</a>
+                  <span class="progress" id="A1">Sample</span></span>
+                </li>
+                <li>
+                  <a href="data/Maths/EvanChen.pdf" target="_blank">EvanChen</a>
+                  <span class="progress" id="A2">Sample</span></span>
+                </li>
+                <li>
+                  <a href="data/Maths/Functional Equations and How To Solve Them.pdf" target="_blank">Functional Equations and How To Solve Them</a>
+                  <span class="progress" id="A3">Sample</span></span>
+                </li>
+                <li>
+                  <a href="data/Maths/Combinatorics.pdf" target="_blank">Combinatorics</a>
+                  <span class="progress" id="A4">Sample</span></span>
+                </li>
+                <li>
+                  <a href="data/Maths/Inequalities.pdf" target="_blank">Inequalities</a>
+                  <span class="progress" id="A5">Sample</span></span>
+                </li>
             </ul>
         </div>
         <div class="category">
             <h2>IT</h2>
             <ul class="pdf-list">
-              <li><a href="https://codeforces.com">Codeforces</a></li>
-              <li><a href="https://usaco.guide/dashboard">Usaco guide</a></li>
-                <li><a href="data/IT/CSES.pdf" target="_blank">Competitive Programmer’s Handbook</a></li>
-                <li><a href="data/IT/PAPS.pdf" target="_blank">Principles of Algorithmic Problem Solving</a></li>
-                <li><a href="data/IT/AITUCO.pdf" target="_blank">An introduction to the
-                  usa computing olympiad</a></li>
+              <li>
+                <a href="https://codeforces.com">Codeforces</a>
+                <span class="span_misc"> <span style="color: #808080;" id="Codeforces_role">Newbie</span> - <span id="Codeforces_elo">925</span> elo</span>
+              </li>
+              <li>
+                <a href="https://usaco.guide/dashboard">Usaco guide</a>
+                <span class="span_misc" id="Usaco_Grade"> KAKA </span>
+              </li>
+                <li>
+                  <a href="data/IT/CSES.pdf" target="_blank">Competitive Programmer’s Handbook</a>
+                  <span class="progress" id="A6">Sample</span></span>
+                </li>
+                <li>
+                  <a href="data/IT/PAPS.pdf" target="_blank">Principles of Algorithmic Problem Solving</a>
+                  <span class="progress" id="A7">Sample</span></span>
+                </li>
+                <li>
+                  <a href="data/IT/AITUCO.pdf" target="_blank">An introduction to the usa computing olympiad</a>
+                  <span class="progress" id="A8">Sample</span></span>
+                </li>
             </ul>
         </div>
         <div class="category">
           <h2>Sport</h2>
           <ul class="pdf-list">
-              <li><a href="data/Sport/Calisthenics Program.pdf" target="_blank">Calisthenics Program</a></li>
+              <li>
+                <a href="data/Sport/Calisthenics Program.pdf" target="_blank">Calisthenics Program</a>
+                <span class="progress" id="A9">Sample</span></span>
+              </li>
+              
           </ul>
         </div>
       <div class="category">
         <h2>Phsyics/Chemistry</h2>
         <ul class="pdf-list">
-            <li><a href="data/Physics-Chemistry/Chemistry.pdf" target="_blank">Chemistry</a></li>
-            <li><a href="data/Physics-Chemistry/PhysicsApplications.pdf" target="_blank">PhysicsApplications</a></li>
-            <li><a href="data/Physics-Chemistry/ModernPhysics.pdf" target="_blank">ModernPhysics</a></li>
-            <li><a href="data/Physics-Chemistry/General Chemistry Principles.pdf" target="_blank">General Chemistry Principles</a></li>
+            <li>
+              <a href="data/Physics-Chemistry/Chemistry.pdf" target="_blank">Chemistry</a>
+              <span class="progress" id="A10">Sample</span></span>
+            </li>
+            <li>
+              <a href="data/Physics-Chemistry/General_Chemistry_Principles.pdf" target="_blank">General Chemistry Principles</a>
+             <span class="progress" id="A11">Sample</span></span>
+          </li>
+            <li>
+              <a href="data/Physics-Chemistry/PhysicsApplications.pdf" target="_blank">PhysicsApplications</a>
+              <span class="progress" id="A12">Sample</span></span>
+          </li>
+            <li>
+              <a href="data/Physics-Chemistry/ModernPhysics.pdf" target="_blank">ModernPhysics</a>
+              <span class="progress" id="A13">Sample</span></span>
+          </li>
         </ul>
       </div>  
         <!-- Add more categories as needed -->
+        <div class = "Menu"><a href="menu.html">Edit Progress</a></div>
     </div>
     <footer class="footer">
       <p>&copy; 2024 Summer Program. Made by El Mesari Yassine. All rights reserved, except books.</p>
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
