--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
                 </li>
                 <li>
                   <a href="data/Maths/Modern_NT.pdf" target="_blank">Modern_NT</a>
-                  <span class="progress" id="A1">Sample</span></span>
+                  <span class="progress" id="B1" ><span class="span_misc" id="A1">Sample</span><span class="span_misc">/Sample</span></span>
                 </li>
                 <li>
                   <a href="data/Maths/EvanChen.pdf" target="_blank">EvanChen</a>
-                  <span class="progress" id="A2">Sample</span></span>
+                  <span class="progress" id="B2" ><span class="span_misc" id="A2">Sample</span><span class="span_misc">/Sample</span></span>
                 </li>
                 <li>
                   <a href="data/Maths/Functional Equations and How To Solve Them.pdf" target="_blank">Functional Equations and How To Solve Them</a>
-                  <span class="progress" id="A3">Sample</span></span>
+                  <span class="progress" id="B3" ><span class="span_misc" id="A3">Sample</span><span class="span_misc">/Sample</span></span>
                 </li>
                 <li>
                   <a href="data/Maths/Combinatorics.pdf" target="_blank">Combinatorics</a>
-                  <span class="progress" id="A4">Sample</span></span>
+                  <span class="progress" id="B4" ><span class="span_misc" id="A4">Sample</span><span class="span_misc">/Sample</span></span>
                 </li>
                 <li>
                   <a href="data/Maths/Inequalities.pdf" target="_blank">Inequalities</a>
-                  <span class="progress" id="A5">Sample</span></span>
+                  <span class="progress" id="B5" ><span class="span_misc" id="A5">Sample</span><span class="span_misc">/Sample</span></span>
                 </li>
             </ul>
         </div>
@@ -51,15 +51,15 @@
               </li>
                 <li>
                   <a href="data/IT/CSES.pdf" target="_blank">Competitive Programmer’s Handbook</a>
-                  <span class="progress" id="A6">Sample</span></span>
+                  <span class="progress" id="B6" ><span class="span_misc" id="A6">Sample</span><span class="span_misc">/Sample</span></span>
                 </li>
                 <li>
                   <a href="data/IT/PAPS.pdf" target="_blank">Principles of Algorithmic Problem Solving</a>
-                  <span class="progress" id="A7">Sample</span></span>
+                  <span class="progress" id="B7" ><span class="span_misc" id="A7">Sample</span><span class="span_misc">/Sample</span></span>
                 </li>
                 <li>
                   <a href="data/IT/AITUCO.pdf" target="_blank">An introduction to the usa computing olympiad</a>
-                  <span class="progress" id="A8">Sample</span></span>
+                  <span class="progress" id="B8" ><span class="span_misc" id="A8">Sample</span><span class="span_misc">/Sample</span></span>
                 </li>
             </ul>
         </div>
@@ -78,19 +78,19 @@
         <ul class="pdf-list">
             <li>
               <a href="data/Physics-Chemistry/Chemistry.pdf" target="_blank">Chemistry</a>
-              <span class="progress" id="A10">Sample</span></span>
+              <span class="progress" id="B10" ><span class="span_misc" id="A10">Sample</span><span class="span_misc">/Sample</span></span>
             </li>
             <li>
               <a href="data/Physics-Chemistry/General_Chemistry_Principles.pdf" target="_blank">General Chemistry Principles</a>
-             <span class="progress" id="A11">Sample</span></span>
+              <span class="progress" id="B11" ><span class="span_misc" id="A11">Sample</span><span class="span_misc">/Sample</span></span>
           </li>
             <li>
               <a href="data/Physics-Chemistry/PhysicsApplications.pdf" target="_blank">PhysicsApplications</a>
-              <span class="progress" id="A12">Sample</span></span>
+              <span class="progress" id="B12" ><span class="span_misc" id="A12">Sample</span><span class="span_misc">/Sample</span></span>
           </li>
             <li>
               <a href="data/Physics-Chemistry/ModernPhysics.pdf" target="_blank">ModernPhysics</a>
-              <span class="progress" id="A13">Sample</span></span>
+              <span class="progress" id="B13" ><span class="span_misc" id="A13">Sample</span><span class="span_misc">/Sample</span></span>
           </li>
         </ul>
       </div>  
@@ -100,6 +100,6 @@
     <footer class="footer">
       <p>&copy; 2024 Summer Program. Made by El Mesari Yassine. All rights reserved, except books.</p>
   </footer>
-  <script src="script.js"></script>
+  <script src="display.js"></script>
 </body>
 </html>
