Added Moussaid Book and removed redondant books

--- a/index.html
+++ b/index.html
@@ -77,20 +77,16 @@
         <h2>Phsyics/Chemistry</h2>
         <ul class="pdf-list">
             <li>
-              <a href="data/Physics-Chemistry/Chemistry.pdf" target="_blank">Chemistry</a>
-              <span class="progress" id="B10" ><span class="span_misc" id="A10">Sample</span><span class="span_misc">/Sample</span></span>
-            </li>
-            <li>
               <a href="data/Physics-Chemistry/General_Chemistry_Principles.pdf" target="_blank">General Chemistry Principles</a>
-              <span class="progress" id="B11" ><span class="span_misc" id="A11">Sample</span><span class="span_misc">/Sample</span></span>
+              <span class="progress" id="B9" ><span class="span_misc" id="A10">Sample</span><span class="span_misc">/Sample</span></span>
           </li>
             <li>
               <a href="data/Physics-Chemistry/PhysicsApplications.pdf" target="_blank">PhysicsApplications</a>
-              <span class="progress" id="B12" ><span class="span_misc" id="A12">Sample</span><span class="span_misc">/Sample</span></span>
+              <span class="progress" id="B10"><span class="span_misc" id="A11">Sample</span><span class="span_misc">/Sample</span></span>
           </li>
-            <li>
-              <a href="data/Physics-Chemistry/ModernPhysics.pdf" target="_blank">ModernPhysics</a>
-              <span class="progress" id="B13" ><span class="span_misc" id="A13">Sample</span><span class="span_misc">/Sample</span></span>
+          <li>
+              <a href="data/Physics-Chemistry/Moussaid_1bsm.pdf" target="_blank">Moussaid_1bsm</a>
+              <span class="progress" id="B11"><span class="span_misc" id="A12">Sample</span><span class="span_misc">/Sample</span> 
           </li>
         </ul>
       </div>  
