--- a/menu.html
+++ b/menu.html
@@ -66,17 +66,14 @@
     <input class="input_style" type="text" id="Book_8" name="Book_8"><br>
 
     <!-- PC -->
-    <label class="label_style" for="Book_9">Chemistry Last Page</label>
-    <input class="input_style" type="text" id="Book_9" name="Book_9"><br>
+    <label class="label_style" for="Book_9">General_Chemistry_Principles Last Page</label>
+    <input class="input_style" type="text" id="Book_9" name="Book9""><br>
 
-    <label class="label_style" for="Book_10">General_Chemistry_Principles Last Page</label>
-    <input class="input_style" type="text" id="Book_10" name="Book10""><br>
+    <label class="label_style" for="Book_10">PhysicsApplications Last Page</label>
+    <input class="input_style" type="text" id="Book_10" name="Book_10"><br>
 
-    <label class="label_style" for="Book_11">PhysicsApplications Last Page</label>
+    <label class="label_style" for="Book_11">Moussaid 1bsm</label>
     <input class="input_style" type="text" id="Book_11" name="Book_11"><br>
-
-    <label class="label_style" for="Book_12">ModernPhysics Last Page</label>
-    <input class="input_style" type="text" id="Book_12" name="Book_12"><br>
 
     <input class="btn" type="button" value="Save changes">
     <div class="Menu"><a href="index.html">Go Back</a></div>
