Filled day 1 of week 1 and fixed some things, with a small redesign

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h2>Maths</h2>
             <ul class="pdf-list">
                 <li>
-                  <a href="https://www.mathraining.be">Mathstraining</a>
+                  <a href="https://www.mathraining.be" target="_blank">Mathstraining</a>
                   <span class="span_misc"><span id="Mathraining_role" style="color: #DD77FF;">Expérimenté</span> - <span id="Mathraining_points">1419</span> points</span>
                 </li>
                 <li>
@@ -42,11 +42,11 @@
             <h2>IT</h2>
             <ul class="pdf-list">
               <li>
-                <a href="https://codeforces.com">Codeforces</a>
+                <a href="https://codeforces.com" target="_blank">Codeforces</a>
                 <span class="span_misc"> <span style="color: #808080;" id="Codeforces_role">Newbie</span> - <span id="Codeforces_elo">925</span> elo</span>
               </li>
               <li>
-                <a href="https://usaco.guide/dashboard">Usaco guide</a>
+                <a href="https://usaco.guide/dashboard" target="_blank">Usaco guide</a>
                 <span class="span_misc" id="Usaco_Grade"> KAKA </span>
               </li>
                 <li>
