--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style.css">
-  <title>Menu</title>
+  <title>Editing Menu</title>
+  <link rel="icon" type="image/x-icon" href="icon.ico">
 </head>
 <body>
   <div class="container">
@@ -116,8 +117,11 @@
       <input class="input_style" type="text" id="Book_11" name="Book_11">
     </div>
 
-    <input class="btn" type="button" value="Save changes">
-    <div class="Menu"><a href="index.html">Go Back</a></div>
+    <div class="form-group">
+      <input class="btn" type="button" value="Save changes">
+      <span class="span_misc"><a href="/data">Visit Whole Directory</a></span>
+    </div>
+    <div class="Menu"><a href="index.html" class="Menu_Data" target="_blank">Go Back</a></div>
   </div>
   <script src="save.js"></script>
 </body>
