--- a/menu.html
+++ b/menu.html
@@ -119,7 +119,7 @@
 
     <div class="form-group">
       <input class="btn" type="button" value="Save changes">
-      <span class="span_misc"><a href="/data">Visit Whole Directory</a></span>
+      <span class="span_misc"><a href="Summer2024.github.io/data">Visit Whole Directory</a></span>
     </div>
     <div class="Menu"><a href="index.html" class="Menu_Data" target="_blank">Go Back</a></div>
   </div>
