--- a/menu.html
+++ b/menu.html
@@ -121,7 +121,7 @@
       <input class="btn" type="button" value="Save changes">
       <span class="span_misc"><a href="Summer2024.github.io/data">Visit Whole Directory</a></span>
     </div>
-    <div class="Menu"><a href="index.html" class="Menu_Data" target="_blank">Go Back</a></div>
+    <div class="Menu"><a href="index.html" class="Menu_Data">Go Back</a></div>
   </div>
   <script src="save.js"></script>
 </body>
