Added and removed one book

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
                   <a href="data/Maths/Inequalities.pdf" target="_blank">Inequalities</a>
                   <span class="progress" id="B5" ><span class="span_misc" id="A5">Sample</span><span class="span_misc">/Sample</span></span>
                 </li>
+                <li>
+                  <a href="data/Maths/Polynomials.pdf" target="_blank">Polynomials</a>
+                  <span class="progress" id="B5.5" ><span class="span_misc" id="A5.5">Sample</span><span class="span_misc">/Sample</span></span>
+                </li>
             </ul>
         </div>
         <div class="category">
@@ -68,7 +72,7 @@
           <h2>Sport</h2>
           <ul class="pdf-list">
               <li>
-                <a href="data/Sport/Calisthenics Program.pdf" target="_blank">Calisthenics Program</a>
+                <a href="data/Sport/Sport.pdf" target="_blank">Sport Program</a>
                 <span class="progress" id="A9">Sample</span></span>
               </li>
               
