--- a/menu.html
+++ b/menu.html
@@ -50,7 +50,10 @@
       <label class="label_style" for="Book_4">Inequalities Last Page:</label>
       <input class="input_style" type="text" id="Book_4" name="Book_4">
     </div>
-    
+    <div class="form-group">
+      <label class="label_style" for="Book_5.5">Polynomials Last Page</label>
+      <input class="input_style" type="text" id="Book_5.5" name="Book_5.5">
+    </div>
     <h2>IT</h2>
     <!-- IT-->
     <div class="form-group">
@@ -93,10 +96,11 @@
       <input class="input_style" type="text" id="Book_7" name="Book_7">
     </div>
 
+
     <!-- Sport -->
     <h2>Sport</h2>
     <div class="form-group">
-      <label class="label_style" for="Book_8">Calisthenics Program Book page</label>
+      <label class="label_style" for="Book_8">Sport Streak</label>
       <input class="input_style" type="text" id="Book_8" name="Book_8">
     </div>
 
