Access to the new books & new topics
JAKARTA

--- a/index.html
+++ b/index.html
@@ -9,98 +9,155 @@
 </head>
 <body>
     <div class="container">
-        <h1><a class="util" target="_blank" href="data/STFO.pdf">Summer Task Flow Organiser</a></h1>
+        <h1><a class="util" target="_blank" href="https://lava-pressure-ef6.notion.site/001-369f3a817d724942b4bc13f5f425be6a">Summer Task Flow Organiser</a></h1>
         <div class="category">
-            <h2>Maths</h2>
+            <h2>Olympiad Maths</h2>
             <ul class="pdf-list">
                 <li>
-                  <a href="https://www.mathraining.be" target="_blank">Mathstraining</a>
+                  <a href="https://www.mathraining.be" target="_blank" class="website">🌐 Mathstraining</a>
                   <span class="span_misc"><span id="Mathraining_role" style="color: #DD77FF;">Expérimenté</span> - <span id="Mathraining_points">1419</span> points</span>
                 </li>
                 <li>
-                  <a href="data/Maths/Modern_NT.pdf" target="_blank">Modern_NT</a>
+                  <a href="data/Maths/Modern_NT.pdf" target="_blank">📕 Modern_NT</a>
                   <span class="progress" id="B1" ><span class="span_misc" id="A1">Sample</span><span class="span_misc">/Sample</span></span>
                 </li>
                 <li>
-                  <a href="data/Maths/EvanChen.pdf" target="_blank">EvanChen</a>
+                  <a href="data/Maths/EvanChen.pdf" target="_blank">📕 EvanChen</a>
                   <span class="progress" id="B2" ><span class="span_misc" id="A2">Sample</span><span class="span_misc">/Sample</span></span>
                 </li>
                 <li>
-                  <a href="data/Maths/Functional Equations and How To Solve Them.pdf" target="_blank">Functional Equations and How To Solve Them</a>
+                  <a href="data/Maths/Functional Equations and How To Solve Them.pdf" target="_blank">📕 Functional Equations and How To Solve Them</a>
                   <span class="progress" id="B3" ><span class="span_misc" id="A3">Sample</span><span class="span_misc">/Sample</span></span>
                 </li>
                 <li>
-                  <a href="data/Maths/Combinatorics.pdf" target="_blank">Combinatorics</a>
+                  <a href="data/Maths/Combinatorics.pdf" target="_blank">📕 Combinatorics</a>
                   <span class="progress" id="B4" ><span class="span_misc" id="A4">Sample</span><span class="span_misc">/Sample</span></span>
                 </li>
                 <li>
-                  <a href="data/Maths/Inequalities.pdf" target="_blank">Inequalities</a>
+                  <a href="data/Maths/Inequalities.pdf" target="_blank">📕 Inequalities</a>
                   <span class="progress" id="B5" ><span class="span_misc" id="A5">Sample</span><span class="span_misc">/Sample</span></span>
                 </li>
                 <li>
-                  <a href="data/Maths/Polynomials.pdf" target="_blank">Polynomials</a>
-                  <span class="progress" id="B5.5" ><span class="span_misc" id="A5.5">Sample</span><span class="span_misc">/Sample</span></span>
-                </li>
-            </ul>
-        </div>
-        <div class="category">
-            <h2>IT</h2>
-            <ul class="pdf-list">
-              <li>
-                <a href="https://codeforces.com" target="_blank">Codeforces</a>
-                <span class="span_misc"> <span style="color: #808080;" id="Codeforces_role">Newbie</span> - <span id="Codeforces_elo">925</span> elo</span>
-              </li>
-              <li>
-                <a href="https://usaco.guide/dashboard" target="_blank">Usaco guide</a>
-                <span class="span_misc" id="Usaco_Grade"> KAKA </span>
-              </li>
-                <li>
-                  <a href="data/IT/CSES.pdf" target="_blank">Competitive Programmer’s Handbook</a>
+                  <a href="data/Maths/Polynomials.pdf" target="_blank">📕 Polynomials</a>
                   <span class="progress" id="B6" ><span class="span_misc" id="A6">Sample</span><span class="span_misc">/Sample</span></span>
                 </li>
                 <li>
-                  <a href="data/IT/PAPS.pdf" target="_blank">Principles of Algorithmic Problem Solving</a>
+                  <a href="data/Maths/Problems from the Book.pdf" target="_blank">📕 Problems from the Book</a>
                   <span class="progress" id="B7" ><span class="span_misc" id="A7">Sample</span><span class="span_misc">/Sample</span></span>
                 </li>
                 <li>
-                  <a href="data/IT/AITUCO.pdf" target="_blank">An introduction to the usa computing olympiad</a>
+                  <a href="data/Maths/the-imo-compendium-1959_2009.pdf" target="_blank">📕 The-Imo-Compendium</a>
                   <span class="progress" id="B8" ><span class="span_misc" id="A8">Sample</span><span class="span_misc">/Sample</span></span>
                 </li>
             </ul>
         </div>
         <div class="category">
-          <h2>Sport</h2>
+          <h2>School Maths</h2>
           <ul class="pdf-list">
-              <li>
-                <a href="data/Sport/Sport.pdf" target="_blank">Sport Program</a>
-                <span class="progress" id="A9">Sample</span></span>
-              </li>
-              
+            <li>
+              <a href="data/Maths/Programme Scolaire/Livret-2nde-1ere.pdf">📗 Transition 2nde-1ere</a>
+              <span class="progress" id="B9" ><span class="span_misc" id="A9">Sample</span><span class="span_misc">/Sample</span></span>
+            </li>
+            <li>
+              <a href="data/Maths/Programme Scolaire/Livret-1ere-Term.pdf">📗 Transition 1ere-Term</a>
+              <span class="progress" id="B10" ><span class="span_misc" id="A10">Sample</span><span class="span_misc">/Sample</span></span>
+            </li>
+            <li>
+              <a href="data/Maths/Programme Scolaire/Transition_CPGE.pdf">📗 Transition Term-CPGE</a>
+              <span class="progress" id="B11" ><span class="span_misc" id="A11">Sample</span><span class="span_misc">/Sample</span></span>
+            </li>
           </ul>
         </div>
+        <div class="category">
+            <h2>IT</h2>
+            <ul class="pdf-list">
+              <li>
+                <a href="https://codeforces.com" target="_blank">🌐 Codeforces</a>
+                <span class="span_misc"> <span style="color: #808080;" id="Codeforces_role">Newbie</span> - <span id="Codeforces_elo">925</span> elo</span>
+              </li>
+              <li>
+                <a href="https://usaco.guide/dashboard" target="_blank">🌐 Usaco guide</a>
+                <span class="span_misc" id="Usaco_Grade"> KAKA </span>
+              </li>
+                <li>
+                  <a href="data/IT/CSES.pdf" target="_blank">📙 Competitive Programmer’s Handbook</a>
+                  <span class="progress" id="B12" ><span class="span_misc" id="A12">Sample</span><span class="span_misc">/Sample</span></span>
+                </li>
+                <li>
+                  <a href="data/IT/PAPS.pdf" target="_blank">📙 Principles of Algorithmic Problem Solving</a>
+                  <span class="progress" id="B13" ><span class="span_misc" id="A13">Sample</span><span class="span_misc">/Sample</span></span>
+                </li>
+                <li>
+                  <a href="data/IT/AITUCO.pdf" target="_blank">📙 An introduction to the usa computing olympiad</a>
+                  <span class="progress" id="B14" ><span class="span_misc" id="A14">Sample</span><span class="span_misc">/Sample</span></span>
+                </li>
+            </ul>
+        </div>
+       
       <div class="category">
         <h2>Phsyics/Chemistry</h2>
         <ul class="pdf-list">
             <li>
-              <a href="data/Physics-Chemistry/General_Chemistry_Principles.pdf" target="_blank">General Chemistry Principles</a>
-              <span class="progress" id="B9" ><span class="span_misc" id="A10">Sample</span><span class="span_misc">/Sample</span></span>
+              <a href="data/Physics-Chemistry/General_Chemistry_Principles.pdf" target="_blank">📚 General Chemistry Principles</a>
+              <span class="progress" id="B15" ><span class="span_misc" id="A15">Sample</span><span class="span_misc">/Sample</span></span>
           </li>
             <li>
-              <a href="data/Physics-Chemistry/PhysicsApplications.pdf" target="_blank">PhysicsApplications</a>
-              <span class="progress" id="B10"><span class="span_misc" id="A11">Sample</span><span class="span_misc">/Sample</span></span>
+              <a href="data/Physics-Chemistry/PhysicsApplications.pdf" target="_blank">📚 PhysicsApplications</a>
+              <span class="progress" id="B16"><span class="span_misc" id="A16">Sample</span><span class="span_misc">/Sample</span></span>
           </li>
           <li>
-              <a href="data/Physics-Chemistry/Moussaid_1bsm.pdf" target="_blank">Moussaid_1bsm</a>
-              <span class="progress" id="B11"><span class="span_misc" id="A12">Sample</span><span class="span_misc">/Sample</span> 
+              <a href="data/Physics-Chemistry/Moussaid_1bsm.pdf" target="_blank">📗 Moussaid_1bsm</a>
+              <span class="progress" id="B17"><span class="span_misc" id="A17">Sample</span><span class="span_misc">/Sample</span> 
           </li>
         </ul>
       </div>  
+      <div class="category">
+        <h2>Sport</h2>
+        <ul class="pdf-list">
+            <li>
+              <a href="data/Sport/Sport.pdf" target="_blank">📜 Sport Program</a>
+            </li>
+        </ul>
+      </div>
+      <div class="category">
+        <h2>Arabic</h2>
+        <ul class="pdf-list">
+          <li>
+            <a href="data/Arabe/جامع الدروس العربية، موسوعة في ثلاثة أجزاء - مصطفى غلاييني.pdf">📗 Grammar</a>
+            <span class="progress" id="B18"><span class="span_misc" id="A18">Sample</span><span class="span_misc">/Sample</span> 
+          </li>
+          <li>
+            <a href="https://www.almaany.com/">🌐 Dictionnary</a>
+          </li>
+          <li>
+            <a href="https://www.madinaharabic.com/quiz/">🌐 Lessons with quiz</a>
+          </li>
+        </ul>
+      </div>
+      <div class="category">
+        <h2>Music</h2>
+        <ul class="pdf-list">
+          <li>
+          <a href="data/Musique/La_Guitare_methode_pour_apprendre_a_jouer_de_la_guitare.pdf">🎻 Guitare</a>
+          <span class="progress" id="B19"><span class="span_misc" id="A19">Sample</span><span class="span_misc">/Sample</span> 
+        </li>
+          <li>
+            <a href="data/Musique/GEORGE PANTILLON.pdf">🎼 George Pantillon</a>
+            <span class="progress" id="B20"><span class="span_misc" id="A20">Sample</span><span class="span_misc">/Sample</span> 
+          </li>
+          <li>
+            <a href="data/Musique/Danhauser_Theorie_De_La_Musique.pdf">🎼 + de Théorie</a>
+            <span class="progress" id="B21"><span class="span_misc" id="A21">Sample</span><span class="span_misc">/Sample</span> 
+          </li>
+        </ul>
+      </div>
         <!-- Add more categories as needed -->
         <div class = "Menu"><a href="menu.html">Edit Progress</a></div>
     </div>
     <footer class="footer">
-      <p>&copy; 2024 Summer Program. Made by El Mesari Yassine. All rights reserved, except books.</p>
+      <p>&copy; 2024 Summer Program. Made by El Messari Yassine. All rights reserved, except books.</p>
   </footer>
   <script src="display.js"></script>
 </body>
 </html>
+<!--Please come speak to me i need freinds-->
