Ajout des annales des coupes animath
PLUS D'EXO ET DONC PLUS D'ENTRAINEMENTS

--- a/menu.html
+++ b/menu.html
@@ -155,7 +155,7 @@
 
     <div class="form-group">
       <input class="btn" type="button" value="Save changes">
-      <span class="span_misc"><a href="Summer2024.github.io/data">Visit Whole Directory</a></span>
+      <span class="span_misc"><a href="./data">Visit Whole Directory</a></span>
     </div>
     <div class="Menu"><a href="index.html" class="Menu_Data">Go Back</a></div>
   </div>
